--- a/src/App.css
+++ b/src/App.css
@@ -36,6 +36,8 @@
     transform: rotate(360deg);
   }
 }
+
+/* crd css starts here */
 nav{
   width: 100%;
   height: 70px;
@@ -52,11 +54,109 @@ nav #nav-btn{
 }
 nav .h4:hover{
   font-weight: bold;
-
 }
 nav #nav-btn{
   box-shadow: 2px 2px 2px gray;
 }
 #show-data{
   margin-top: 50px;
+}
+
+/* table */
+table { 
+  width: 100%; 
+  border-collapse: collapse; 
+}
+/* Zebra striping */
+tr:nth-of-type(odd) { 
+  background: #eee; 
+}
+th { 
+  background: #333; 
+  color: white; 
+  font-weight: bold; 
+}
+td, th { 
+  padding: 6px; 
+  border: 1px solid #ccc; 
+  text-align: left; 
+}
+#site-search{
+  margin:25px 0px 0px 340px;
+  border: 1px solid;
+  width:500px;
+  height:50px;
+}
+
+@media 
+only screen and (max-width: 760px),
+(min-device-width: 768px) and (max-device-width: 1024px)  {
+
+/* Force table to not be like tables anymore */
+table, thead, tbody, th, td, tr { 
+  display: block; 
+}
+
+/* Hide table headers (but not display: none;, for accessibility) */
+thead tr { 
+  position: absolute;
+  top: -9999px;
+  left: -9999px;
+      font-weight: bold;
+}
+
+tr { border: 1px solid #ccc; }
+
+td { 
+  /* Behave  like a "row" */
+  border: none;
+  border-bottom: 1px solid #eee; 
+  position: relative;
+  padding-left: 50%; 
+}
+
+td:After { 
+  /* Now like a table header */
+  position: absolute;
+  /* Top/left values mimic padding */
+  top: 6px;
+  left: 100px;
+  width: 45%; 
+  padding-right: 10px; 
+  white-space: nowrap;
+}
+
+/*
+Label the data
+*/
+td:nth-of-type(1):before { content: "Sr.No. : "; }
+td:nth-of-type(2):before { content: "Company Name : "; }
+td:nth-of-type(3):before { content: "Founded Date : "; }
+td:nth-of-type(4):before { content: "Headquarter Location : "; }
+td:nth-of-type(5):before { content: "Description : "; }
+td:nth-of-type(6):before { content: "Action : "; }
+}
+
+@media only screen and (max-width:600px) {
+  nav #nav-btn{
+    margin: -50px 0px 0px 180px;
+  }
+  #site-search{
+    margin:25px 0px 0px 15px;
+    width:300px;
+    height:30px;
+    border: 1px solid;
+  }
+}
+
+@media only screen and ((min-width:601px) and (max-width:900px)){
+  nav #nav-btn{
+    margin: 15px 0px 0px 180px;
+  }
+  #site-search{
+    margin:25px 0px 0px 240px;
+    border: 1px solid;
+    width:400px;
+    height:50px;
+  }
 }
